feat: 优化标签，支持标签展示

--- a/src/components/AddTag/index.module.less
+++ b/src/components/AddTag/index.module.less
@@ -6,11 +6,10 @@
   height: 31.6px;
   display: flex;
   align-items: center;
-  margin-left: auto;
 }
 .inputTag {
   margin-bottom: 10px;
 }
 .tags {
-  margin-bottom: 6px;
+  margin: 6px 0;
 }
