--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -1,5 +1,5 @@
 html[data-theme="dark"] {
-  --primary-bg-color: #121212;
+  --primary-bg-color: #110f16;
   --line-color: rgba(86, 84, 84, 0.76);
   --card-item-hover-bg: rgba(1, 27, 37, 0.9);
   --catd-item-divider: rgba(255, 255, 255, 0.3);
