--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -1,5 +1,5 @@
 html[data-theme='light'] {
-  --primary-bg-color: #fff;
+  --primary-bg-color: #f3f5f7;
   --line-color: #eee;
   --footer-item-bg: rgba(0, 0, 0, 0.04);
   --footer-item-hover-bg: rgba(26, 102, 255, 0.1);
