feat: 卡片管理优化，明亮主题更好的支持】

--- a/src/components/WindowControl/index.module.less
+++ b/src/components/WindowControl/index.module.less
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     &:hover {
-      background-color: rgba(47, 49, 52);
+      background-color: var(--window-control-hover-bg);
       border-radius: 4px;
       cursor: pointer;
     }
