--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -57,6 +57,9 @@
       flex-direction: column;
       gap: 10px;
       overflow-y: auto;
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
   }
   .content {
