--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -10,4 +10,5 @@ html[data-theme="dark"] {
   --code-bg: transparent;
   --box-shadow1: 0px 2px 4px 0 rgba(217, 217, 227, 0.32);
   --block-panel-active-bg: #1a1b1d;
+  --window-control-hover-bg: rgba(255, 255, 255, 0.2);
 }
