--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -10,5 +10,6 @@ html[data-theme='light'] {
   --code-bg: rgba(250, 255, 100, 0.153);
   --box-shadow1: 0 1.5px 3px 0 rgba(0, 0, 0, .15);
   --block-panel-active-bg: #f6f8fa;
+  --window-control-hover-bg: rgba(0, 0, 0, 0.08);
 }
 
