--- a/src/components/AddTag/index.module.less
+++ b/src/components/AddTag/index.module.less
@@ -1,5 +1,5 @@
 .addTagButton {
-  margin-bottom: 10px;
+  margin-top: 10px;
   font-size: 12px;
   width: fit-content;
   cursor: pointer;
@@ -8,7 +8,7 @@
   align-items: center;
 }
 .inputTag {
-  margin-bottom: 10px;
+  margin-top: 10px;
 }
 .tags {
   margin: 6px 0;
