optimize: 亮色主题优化

--- a/src/components/IconText/index.module.less
+++ b/src/components/IconText/index.module.less
@@ -5,10 +5,10 @@
   gap: 8px;
   color: var(--text-normal);
   &.active {
-    color: #1a66ff;
+    color: gray;
   }
   &:hover {
-    color: #1a66ff;
+    color: gray;
     cursor: pointer;
   }
   .text {
