--- a/src/components/Tags/Tag/index.module.less
+++ b/src/components/Tags/Tag/index.module.less
@@ -5,7 +5,7 @@
   background-color: var(--tag-bg);
   color: var(--tag-color);
   cursor: pointer;
-  &:hover {
+  &.hoverAble:hover {
     background-color: var(--tag-hover-bg);
   }
   &.dark {
