--- a/src/components/WindowControl/index.module.less
+++ b/src/components/WindowControl/index.module.less
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     &:hover {
-      background-color: var(--window-control-hover-bg);
+      background-color: var(--common-hover-bg);
       border-radius: 4px;
       cursor: pointer;
     }
