--- a/src/layouts/DefaultLayout/TitleBar/index.module.less
+++ b/src/layouts/DefaultLayout/TitleBar/index.module.less
@@ -7,7 +7,7 @@
   .nav {
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
     .item {
       cursor: pointer;
       &.active {
@@ -27,7 +27,7 @@
     padding: 8px 16px;
     cursor: pointer;
     &:hover {
-      background-color: rgba(47, 49, 52);
+      background-color: var(--common-hover-bg);
       border-radius: 4px;
       cursor: pointer;
     }
