--- a/src/pages/Cards/CardDetail/CardList/index.module.less
+++ b/src/pages/Cards/CardDetail/CardList/index.module.less
@@ -12,7 +12,7 @@
     box-shadow: var(--box-shadow1);
     border-radius: 8px;
     &.hover:hover {
-      background-color: var(--card-item-hover-bg);
+      background-color: var(--common-hover-bg);
     }
     .tags {
       margin-bottom: 10px;
