--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -21,7 +21,9 @@
         .number {
           font-weight: bold;
         }
-        .create {
+        .buttons {
+          display: flex;
+          gap: 8px;
           flex-shrink: 0;
         }
       }
@@ -57,6 +59,7 @@
       flex-direction: column;
       gap: 10px;
       overflow-y: auto;
+      padding: 4px;
       &::-webkit-scrollbar {
         display: none;
       }
