--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -1,8 +1,6 @@
 html[data-theme='light'] {
   --primary-bg-color: #f3f5f7;
-  --line-color: #eee;
-  --footer-item-bg: rgba(0, 0, 0, 0.04);
-  --footer-item-hover-bg: rgba(26, 102, 255, 0.1);
+  --line-color: #ddd;
   --card-item-hover-bg: rgba(26, 102, 255, 0.1);
   --catd-item-divider: rgba(0, 0, 0, 0.3);
   --text-normal: rgba(0, 0, 0, .9);
@@ -10,6 +8,6 @@ html[data-theme='light'] {
   --code-bg: rgba(250, 255, 100, 0.153);
   --box-shadow1: 0 1.5px 3px 0 rgba(0, 0, 0, .15);
   --block-panel-active-bg: #f6f8fa;
-  --window-control-hover-bg: rgba(0, 0, 0, 0.08);
+  --common-hover-bg: rgba(0, 0, 0, 0.08);
 }
 
