--- a/src/components/Editor/components/CodeBlock/index.module.less
+++ b/src/components/Editor/components/CodeBlock/index.module.less
@@ -36,7 +36,7 @@
     padding: 48px 12px 18px 12px;
     border-radius: 5px;
     line-height: 1.8;
-    font-size: 14px;
+    font-size: calc(var(--font-size) * 0.75);
     font-family: var(--mono-font, "'Monaco', '楷体'");
   }
 
