--- a/src/pages/Cards/CardDetail/index.module.less
+++ b/src/pages/Cards/CardDetail/index.module.less
@@ -17,10 +17,11 @@
     height: calc(100% - 60px);
     padding: 40px;
     margin: 0 auto;
-    min-width: 600px;
-    max-width: 800px;
+    min-width: 500px;
+    max-width: 700px;
     @media screen and (max-width: 1280px) {
-      max-width: 600px;
+      min-width: 300px;
+      max-width: 80%;
     }
     .tags {
       margin-top: 20px;
