feat: App 组件继承高度和字体大小，Titlebar 切换支持动画，文章编辑 loading 态和空状态

--- a/src/pages/Articles/ArticleEdit/index.module.less
+++ b/src/pages/Articles/ArticleEdit/index.module.less
@@ -29,7 +29,14 @@
     }
   }
   .contentContainer {
-    max-width: 600px;
+    max-width: 800px;
     margin: 40px auto;
   }
+}
+
+.loading, .empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
