--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -1,12 +1,11 @@
 html[data-theme="dark"] {
   --primary-bg-color: #110f16;
-  --line-color: rgba(86, 84, 84, 0.7);
-  --card-item-hover-bg: rgba(1, 27, 37, 0.9);
-  --catd-item-divider: rgba(255, 255, 255, 0.3);
+  --line-color: rgba(86, 84, 84, .7);
   --text-normal: rgba(255, 255, 255, .9);
   --code-normal: #FBDE2D;
   --code-bg: transparent;
-  --box-shadow1: 0px 2px 4px 0 rgba(217, 217, 227, 0.32);
+  --box-shadow1: 0px 3px 3px 0 rgba(128, 128, 128, .3);
+  --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #1a1b1d;
-  --common-hover-bg: rgba(255, 255, 255, 0.1);
+  --common-hover-bg: rgba(255, 255, 255, .1);
 }
