--- a/src/layouts/DefaultLayout/TitleBar/index.module.less
+++ b/src/layouts/DefaultLayout/TitleBar/index.module.less
@@ -10,6 +10,15 @@
     gap: 20px;
     .item {
       cursor: pointer;
+      position: relative;
+      .line {
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background-color: #1a66ff;
+        bottom: -20px;
+        left: 0;
+      }
       &.active {
         color: #1a66ff;
       }
