--- a/src/layouts/DefaultLayout/index.module.less
+++ b/src/layouts/DefaultLayout/index.module.less
@@ -22,6 +22,10 @@
       box-sizing: border-box;
       height: var(--detail-height);
       overflow: auto;
+      .app {
+        height: 100%;
+        font-size: var(--font-size);
+      }
     }
   }
 }
