--- a/src/pages/Articles/ArticleCard/index.module.less
+++ b/src/pages/Articles/ArticleCard/index.module.less
@@ -38,12 +38,15 @@
     --text-color: #fff;
   }
   .content {
-    width: 66%;
+    width: 60%;
     padding: 0 40px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 12px;
+    overflow: hidden;
     .title {
+      max-width: 100%;
+      display: block;
       font-size: 32px;
       font-weight: bold;
       color: var(--text-normal);
@@ -65,9 +68,10 @@
     }
   }
   .imageContainer {
-    width: 44%;
+    width: 40%;
     height: 100%;
     overflow: hidden;
+    flex-shrink: 0;
     img {
       width: 100%;
       height: 100%;
