--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -1,13 +1,13 @@
 html[data-theme='light'] {
   --primary-bg-color: #f3f5f7;
   --line-color: #ddd;
-  --card-item-hover-bg: rgba(26, 102, 255, 0.1);
-  --catd-item-divider: rgba(0, 0, 0, 0.3);
   --text-normal: rgba(0, 0, 0, .9);
   --code-normal: #18045f;
-  --code-bg: rgba(250, 255, 100, 0.153);
-  --box-shadow1: 0 1.5px 3px 0 rgba(0, 0, 0, .15);
+  // --code-bg: rgba(250, 255, 100, .15);
+  --code-bg: transparent;
+  --box-shadow1: 0 3px 6px 0 rgba(0, 0, 0, .15);
+  --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #f6f8fa;
-  --common-hover-bg: rgba(0, 0, 0, 0.08);
+  --common-hover-bg: rgba(0, 0, 0, .08);
 }
 
