feat: 添加标签优化

--- a/src/components/WidthResizable/index.module.less
+++ b/src/components/WidthResizable/index.module.less
@@ -1,5 +1,9 @@
 .widthResizable {
   position: relative;
+  flex: none;
+  &.shrink {
+    flex: auto;
+  }
   .resizeBar {
     cursor: col-resize;
     height: 100%;
