--- a/src/pages/Cards/CardDetail/index.module.less
+++ b/src/pages/Cards/CardDetail/index.module.less
@@ -1,17 +1,8 @@
 .cardDetail {
   position: relative;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  .header {
-    height: 60px;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding: 0 40px;
-    gap: 10px;
-  }
+  //display: flex;
+  //flex-direction: column;
   .editorContainer {
     overflow-y: auto;
     height: calc(100% - 60px);
@@ -21,7 +12,7 @@
     max-width: 700px;
     @media screen and (max-width: 1280px) {
       min-width: 300px;
-      max-width: 80%;
+      max-width: 70%;
     }
     .tags {
       margin-top: 20px;
