--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -2,6 +2,7 @@
   display: flex;
   height: calc(100vh - var(--title-bar-height));
   .sidebar {
+    flex: none;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -68,6 +69,6 @@
   .content {
     height: 100%;
     overflow-y: auto;
-    flex: 1;
+    flex: auto;
   }
 }
