--- a/src/pages/Articles/ArticleEdit/index.module.less
+++ b/src/pages/Articles/ArticleEdit/index.module.less
@@ -15,6 +15,7 @@
       font-size: 48px;
       font-weight: bold;
       margin: 0;
+      padding-left: 4px;
     }
     .metaInfo {
       display: flex;
@@ -31,6 +32,9 @@
   .contentContainer {
     max-width: 800px;
     margin: 40px auto;
+    .tags {
+      margin-top: 20px;
+    }
   }
 }
 
