--- a/src/layouts/DefaultLayout/index.module.less
+++ b/src/layouts/DefaultLayout/index.module.less
@@ -4,6 +4,9 @@
   --title-bar-height: 60px;
   --container-width: calc(100vw - var(--sidebar-width));
   --detail-height: calc(100vh - var(--title-bar-height));
+  background-image:
+    linear-gradient(-80deg, rgba(0, 118, 189, 0.1), transparent 80%),
+    linear-gradient(100deg, rgba(189, 187, 73, 0.1), transparent 80%);
   .sidebar {
     width: var(--sidebar-width);
     height: 100vh;
@@ -17,11 +20,14 @@
       border-bottom: 1px solid var(--line-color);
     }
     .detail {
-      background-color: var(--primary-bg-color);
+      //background-color: var(--primary-bg-color);
       position: relative;
       box-sizing: border-box;
       height: var(--detail-height);
       overflow: auto;
+      //background-image:
+      //  linear-gradient(-80deg, rgba(0, 118, 189, 0.1), transparent 80%);
+        //linear-gradient(30deg, rgba(121, 221, 9, 0.1), transparent 50%);
       .app {
         height: 100%;
         font-size: var(--font-size);
