--- a/src/pages/Articles/ArticleCard/index.module.less
+++ b/src/pages/Articles/ArticleCard/index.module.less
@@ -6,6 +6,8 @@
   align-items: center;
   overflow: hidden;
   height: 360px;
+  max-width: 1000px;
+  flex: none;
   border-radius: 12px;
   box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.66);
   background-color: var(--card-bg);
