--- a/src/pages/Articles/index.module.less
+++ b/src/pages/Articles/index.module.less
@@ -2,7 +2,10 @@
   padding: 40px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 40px;
-  max-width: 1000px;
   margin: 0 auto;
+  height: 100%;
+  overflow-y: auto;
+  box-sizing: border-box;
 }
