--- a/src/pages/Cards/CardDetail/index.module.less
+++ b/src/pages/Cards/CardDetail/index.module.less
@@ -1,13 +1,14 @@
 .cardDetail {
   position: relative;
-  height: 100%;
-  //display: flex;
-  //flex-direction: column;
+  display: flex;
+  gap: 40px;
+  padding: 40px;
   .editorContainer {
+    flex: auto;
     overflow-y: auto;
     height: calc(100% - 60px);
-    padding: 40px;
     margin: 0 auto;
+    padding: 0 40px;
     min-width: 500px;
     max-width: 700px;
     @media screen and (max-width: 1280px) {
@@ -19,6 +20,20 @@
     }
     &::-webkit-scrollbar {
       display: none;
+    }
+  }
+
+  .linksContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 300px;
+    flex: none;
+    box-sizing: border-box;
+    overflow: hidden;
+    transition: width 0.3s ease-in-out;
+    &.hide {
+      width: 0;
     }
   }
 }
