feat: 数学公式编辑重构

--- a/src/components/Editor/components/CodeBlock/index.module.less
+++ b/src/components/Editor/components/CodeBlock/index.module.less
@@ -1,6 +1,6 @@
 .codeBlockContainer {
   position: relative;
-  --code-block-bg-color: #fafafa;
+  --code-block-bg-color: rgba(255, 255, 255, 0.3);
   &.dark {
     --code-block-bg-color: #0c1021;
   }
