--- a/src/components/Editor/components/BlockPanel/List/index.module.less
+++ b/src/components/Editor/components/BlockPanel/List/index.module.less
@@ -5,7 +5,7 @@
   overflow-y: auto;
   flex-direction: column;
   background-color: var(--block-panel-bg);
-  box-shadow: var(--box-shadow1);
+  //box-shadow: var(--box-shadow1);
   border-radius: 6px;
   // 隐藏滚动条
   &::-webkit-scrollbar {
