feat: 代码块和Callout对只读模式更好的支持

--- a/src/components/Editor/components/CodeBlock/index.module.less
+++ b/src/components/Editor/components/CodeBlock/index.module.less
@@ -4,6 +4,11 @@
   &.dark {
     --code-block-bg-color: #0c1021;
   }
+  &.readOnly {
+    :global(.CodeMirror-cursors) {
+      display: none;
+    }
+  }
   .copyButton {
     position: absolute;
     top: 10px;
