--- a/src/pages/Cards/CardItem/index.module.less
+++ b/src/pages/Cards/CardItem/index.module.less
@@ -6,7 +6,7 @@
   padding: 16px 16px 0;
   border-radius: 8px;
   box-sizing: border-box;
-  background-image: linear-gradient(-30deg, rgba(0, 118, 189, 0.1), transparent 80%), linear-gradient(30deg, rgba(189, 187, 73, 0.1), transparent 80%);
+  //background-image: linear-gradient(-30deg, rgba(0, 118, 189, 0.1), transparent 80%), linear-gradient(30deg, rgba(189, 187, 73, 0.1), transparent 80%);
   &:hover {
     background-color: var(--common-hover-bg);
     cursor: pointer;
