feat: 图床设置从编辑器移动到全局

--- a/src/layouts/DefaultLayout/SettingModal/index.module.less
+++ b/src/layouts/DefaultLayout/SettingModal/index.module.less
@@ -1,20 +1,3 @@
-.settingGroup {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  .settingTitle {
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
-    color: #1a66ff;
-  }
-  .inputItem {
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    .label {
-      white-space: nowrap;
-      flex-shrink: 0;
-    }
-  }
+.tabs {
+  height: 100%;
 }
