--- a/src/layouts/DefaultLayout/index.module.less
+++ b/src/layouts/DefaultLayout/index.module.less
@@ -31,6 +31,7 @@
       .app {
         height: 100%;
         font-size: var(--font-size);
+        color: var(--text-normal);
       }
     }
   }
