--- a/src/components/Editor/components/DivideLine/index.module.less
+++ b/src/components/Editor/components/DivideLine/index.module.less
@@ -1,6 +1,6 @@
 .divideLine {
   width: 80%;
   height: 2px;
-  background-color: #e8e8e8;
-  margin: 20px auto;
+  background-color: var(--line-color, #e8e8e8);
+  margin: 0 auto 20px;
 }
