feat: 设置初始化修复，卡片区 UI 调整

--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -8,6 +8,6 @@ html[data-theme='light'] {
   --box-shadow1: 0 3px 6px 0 rgba(0, 0, 0, .15);
   --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #f6f8fa;
-  --common-hover-bg: rgba(0, 0, 0, .08);
+  --common-hover-bg: #EFF0F0;
 }
 
