--- a/src/pages/Cards/CardItem2/index.module.less
+++ b/src/pages/Cards/CardItem2/index.module.less
@@ -4,10 +4,6 @@
   border-radius: 4px;
   position: relative;
 
-  .tags {
-    width: calc(100% - 32px);
-  }
-
   &::after {
     content: '';
     position: absolute;
@@ -21,9 +17,16 @@
   &:hover {
     background-color: var(--common-hover-bg);
     cursor: pointer;
+    .moreIcon {
+      display: flex;
+    }
   }
   &.active {
     background-color: var(--common-hover-bg);
+  }
+
+  .tags {
+    width: calc(100% - 32px);
   }
 
   .textContainer {
@@ -42,17 +45,16 @@
 
   .moreIcon {
     position: absolute;
-    top: 16px;
-    right: 16px;
+    top: 4px;
+    right: 4px;
     width: 30px;
     height: 30px;
-    border-radius: 50%;
-    display: flex;
     align-items: center;
     justify-content: center;
+    display: none;
     &:hover {
+      background-color: var(--common-hover-bg);
       cursor: pointer;
-      background: var(--common-hover-bg);
     }
   }
 }
