feat: 样式的小修复‘

--- a/src/components/Editor/components/Header/index.module.less
+++ b/src/components/Editor/components/Header/index.module.less
@@ -5,8 +5,8 @@
 .h5,
 .h6 {
   line-height: 1.5;
-  font-weight: 800;
-  margin-bottom: 16px;
+  font-weight: bold;
+  margin-bottom: 32px;
   width: fit-content;
   display: flex;
   align-items: center;
@@ -17,51 +17,51 @@
 .h1 {
   font-size: 32px;
   line-height: 1.3;
-  border-bottom: solid 3px rgba(128, 30, 255, 1);
+  //border-bottom: solid 3px rgba(128, 30, 255, 1);
 }
 
 .h2 {
   font-size: 28px;
-  border-radius: 14px;
+  //border-radius: 14px;
 }
-.h2::before {
-  content: "H2";
-  border-radius: .3em;
-  font-size: .8em;
-  padding: 4px 7px;
-  margin-right: .5em;
-  background-color: rgba(128, 30, 255, 1);
-  color: white;
-}
+//.h2::before {
+//  content: "H2";
+//  border-radius: .3em;
+//  font-size: .8em;
+//  padding: 4px 7px;
+//  margin-right: .5em;
+//  background-color: rgba(128, 30, 255, 1);
+//  color: white;
+//}
 
 .h3 {
   font-size: 24px;
-  border-radius: 10px;
+  //border-radius: 10px;
 }
-.h3::before {
-  content: "H3";
-  color: white;
-  font-size: 0.8em;
-  background-color: rgba(128, 30, 255, 1);
-  border-radius: .3em;
-  margin-right: 12px;
-  padding: 4px 7px;
-}
+//.h3::before {
+//  content: "H3";
+//  color: white;
+//  font-size: 0.8em;
+//  background-color: rgba(128, 30, 255, 1);
+//  border-radius: .3em;
+//  margin-right: 12px;
+//  padding: 4px 7px;
+//}
 
 .h4 {
   font-size: 20px;
-  border-radius: .3em;
+  //border-radius: .3em;
 }
 
-.h4::before {
-  content: "H4";
-  color: white;
-  font-size: 0.8em;
-  background-color: rgba(128, 30, 255, 1);
-  border-radius: .3em;
-  margin-right: 12px;
-  padding: 4px 7px;
-}
+//.h4::before {
+//  content: "H4";
+//  color: white;
+//  font-size: 0.8em;
+//  background-color: rgba(128, 30, 255, 1);
+//  border-radius: .3em;
+//  margin-right: 12px;
+//  padding: 4px 7px;
+//}
 
 .h5 {
   font-size: 18px;
