--- a/src/components/Outline/index.module.less
+++ b/src/components/Outline/index.module.less
@@ -18,5 +18,11 @@
     &[data-level="3"] {
       padding-left: 32px;
     }
+    &[data-level="4"] {
+      padding-left: 48px;
+    }
+    &[data-level="5"] {
+      padding-left: 64px;
+    }
   }
 }
