--- a/src/components/Editor/components/HoveringToolbar/index.module.less
+++ b/src/components/Editor/components/HoveringToolbar/index.module.less
@@ -6,7 +6,8 @@
   left: -500px;
   transition: opacity 0.75s;
   padding: 4px;
-  background-color: #E2E8F0;
+  background-color: var(--primary-bg-color);
+  box-shadow: var(--box-shadow1);
   display: flex;
   border-radius: 8px;
 }
