feat: 目录可隐藏

--- a/src/pages/Articles/ArticleEdit/index.module.less
+++ b/src/pages/Articles/ArticleEdit/index.module.less
@@ -49,6 +49,7 @@
     }
     .rightPart {
       flex: none;
+      min-width: 200px;
       max-width: 280px;
       margin-left: auto;
       margin-right: 80px;
