feat: 删除自定义编辑块时，替换为一个段落

--- a/src/components/Editor/components/Link/index.module.less
+++ b/src/components/Editor/components/Link/index.module.less
@@ -4,6 +4,15 @@
   cursor: pointer;
 }
 
+.editContainer {
+  width: 400px;
+  display: flex;
+  gap: 10px;
+  .input {
+    flex: auto;
+  }
+}
+
 .active {
   opacity: 0.5;
 }
