feat: 表格支持黑暗主题

--- a/src/components/Editor/extensions/table/components/Table/Actions/index.module.less
+++ b/src/components/Editor/extensions/table/components/Table/Actions/index.module.less
@@ -20,7 +20,7 @@
     align-items: center;
     &:hover {
       cursor: pointer;
-      background: #f5f5f5;
+      background: var(--common-hover-bg);
     }
   }
 }
