--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -8,4 +8,6 @@ html[data-theme="dark"] {
   --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #1a1b1d;
   --common-hover-bg: rgba(255, 255, 255, .1);
+  --table-odd-bg: rgba(255, 255, 255, .05);
+  --table-border-color: #606770;
 }
