--- a/src/components/Editor/extensions/table/components/Table/index.module.less
+++ b/src/components/Editor/extensions/table/components/Table/index.module.less
@@ -1,12 +1,9 @@
 .operate {
-  padding: 0 10px;
   user-select: none;
   height: 40px;
-  background: #f1f1f1;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #666;
   transition: height 0.3s ease-in-out;
   &.hide {
     height: 0;
@@ -31,7 +28,7 @@
       border-radius: 50%;
       cursor: pointer;
       &:hover {
-        background: #e5e5e5;
+        background: var(--common-hover-bg);
       }
     }
     .more {
@@ -52,13 +49,13 @@
   }
 
   tr:nth-child(odd) {
-    background: #f6f6f7;
+    background: var(--table-odd-bg);
   }
 
   th, td {
     padding: 12px 16px;
     text-align: left;
-    border: 1px solid #ddd;
+    border: 1px solid var(--table-border-color);
     overflow: hidden;
     text-overflow: ellipsis;
     word-break: break-word;
