--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -8,6 +8,8 @@ html[data-theme='light'] {
   --box-shadow1: 0 3px 6px 0 rgba(0, 0, 0, .15);
   --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #e6e6e6;
-  --common-hover-bg: #EFF0F0;
+  --common-hover-bg: #eaeaea;
+  --table-border-color: #dadde1;
+  --table-odd-bg: #e6e6e666;
 }
 
