--- a/src/components/Editor/components/HoveringToolbar/ColorSelect/index.module.less
+++ b/src/components/Editor/components/HoveringToolbar/ColorSelect/index.module.less
@@ -1,8 +1,8 @@
 .colorSelectContainer {
   position: absolute;
   background-color: var(--primary-bg-color);
-  right: -70px;
-  top: 0;
+  right: -180px;
+  top: 40px;
   width: 200px;
   overflow-y: auto;
   display: flex;
@@ -10,6 +10,7 @@
   gap: 10px;
   padding: 10px;
   box-shadow: var(--box-shadow1);
+  border-radius: 8px;
   .item {
     width: 40px;
     height: 40px;
