--- a/src/components/Editor/components/HoveringToolbar/HoveringButton/index.module.less
+++ b/src/components/Editor/components/HoveringToolbar/HoveringButton/index.module.less
@@ -1,9 +1,12 @@
 .buttonContainer {
   user-select: none;
   width: 40px;
-  line-height: 40px;
-  text-align: center;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: Merriweather, serif;
+  font-size: 16px;
   &:not(:last-child) {
     margin-right: 8px;
   }
