--- a/src/pages/Cards/CardItem2/index.module.less
+++ b/src/pages/Cards/CardItem2/index.module.less
@@ -9,10 +9,9 @@
     position: absolute;
     left: 0;
     bottom: -10px;
-    width: calc(100% - 32px);
+    width: 100%;
     height: 1px;
-    transform: translate(16px, 0);
-    background-color: var(--line-color, #e8e8e8);
+    background-color: var(--line-color);
   }
   &:hover {
     background-color: var(--common-hover-bg);
