feat: bug 修复，代码块通过回车来创建代码块

--- a/src/pages/Cards/CardItem2/index.module.less
+++ b/src/pages/Cards/CardItem2/index.module.less
@@ -51,6 +51,7 @@
     align-items: center;
     justify-content: center;
     display: none;
+    border-radius: 50%;
     &:hover {
       background-color: var(--common-hover-bg);
       cursor: pointer;
