feat: 文章支持置顶、更换头图以及删除

--- a/src/pages/Articles/ArticleEdit/index.module.less
+++ b/src/pages/Articles/ArticleEdit/index.module.less
@@ -4,7 +4,9 @@
   .cover {
     height: 400px;
     width: 100%;
-    background: url("https://cdn.jsdelivr.net/gh/LastKnightCoder/ImgHosting2/20210402153806.png") no-repeat center center / cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     display: flex;
     flex-direction: column;
     gap: 20px;
