--- a/src/pages/Articles/ArticleCard/index.module.less
+++ b/src/pages/Articles/ArticleCard/index.module.less
@@ -2,16 +2,20 @@
   --card-bg: #e1e5ea;
   --text-color: #18151f;
   --gradient-angle: -80deg;
+  position: relative;
   display: flex;
   align-items: center;
   overflow: hidden;
   height: 360px;
-  max-width: 1000px;
+  width: 1000px;
   flex: none;
   border-radius: 12px;
   box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.66);
   background-color: var(--card-bg);
   background-image: linear-gradient(var(--gradient-angle), var(--bg-color2), transparent 50%);
+  @media screen and (max-width: 800px) {
+    width: 600px;
+  }
   &.right {
     --gradient-angle: 80deg;
   }
@@ -41,11 +45,32 @@
   }
   .content {
     width: 60%;
+    height: 100%;
     padding: 0 40px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 12px;
     overflow: hidden;
+    position: relative;
+    .operate {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 28px;
+      height: 28px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      &.left {
+        left: 10px;
+      }
+      &:hover {
+          cursor: pointer;
+          background-color: rgba(255, 255, 255, 0.2);
+      }
+    }
     .title {
       max-width: 100%;
       display: block;
@@ -74,6 +99,7 @@
     height: 100%;
     overflow: hidden;
     flex-shrink: 0;
+    position: relative;
     img {
       width: 100%;
       height: 100%;
@@ -86,6 +112,31 @@
     }
     &.right {
       order: 1;
+      .topStar {
+        left: unset;
+        right: 10px;
+      }
+    }
+    .topStar {
+      position: absolute;
+      width: 24px;
+      height: 24px;
+      top: 10px;
+      left: 10px;
+    }
+  }
+}
+
+.settings {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  .settingItem {
+    padding: 8px 16px;
+    border-radius: 4px;
+    &:hover {
+      background-color: var(--common-hover-bg);
+      cursor: pointer;
     }
   }
 }
