--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -25,11 +25,16 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 100%;
+    width: calc(100% - 40px);
+    margin: 20px;
     box-sizing: border-box;
     padding: 20px;
-    height: 100%;
+    height: calc(100% - 40px);
     border-right: 1px solid var(--line-color);
+    background-color: var(--card-bg-color);
+    // box-shadow: var(--box-shadow1);
+    border-radius: 8px;
+    border: 1px solid var(--line-color);
     .header {
       display: flex;
       gap: 10px;
@@ -86,6 +91,7 @@
     }
   }
   .content {
+    border-radius: 8px;
     height: 100%;
     overflow-y: auto;
     flex: auto;
