--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -7,7 +7,8 @@ html[data-theme="dark"] {
   --box-shadow1: 0px 3px 3px 0 rgba(128, 128, 128, .3);
   --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #1a1b1d;
-  --common-hover-bg: rgba(255, 255, 255, .1);
+  --common-hover-bg: rgba(255, 255, 255, .04);
   --table-odd-bg: rgba(255, 255, 255, .05);
   --table-border-color: #606770;
+  --card-bg-color: rgb(255 255 255 / 0.01);
 }
