--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -1,5 +1,5 @@
 html[data-theme='light'] {
-  --primary-bg-color: #f3f5f7;
+  --primary-bg-color: #f5f7f9;
   --line-color: #ddd;
   --text-normal: rgba(0, 0, 0, .9);
   --code-normal: #18045f;
@@ -8,8 +8,9 @@ html[data-theme='light'] {
   --box-shadow1: 0 3px 6px 0 rgba(0, 0, 0, .15);
   --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #e6e6e6;
-  --common-hover-bg: rgba(0, 0, 0, .05);
+  --common-hover-bg: rgba(0, 0, 0, .03);
   --table-border-color: #dadde1;
   --table-odd-bg: #e6e6e666;
+  --card-bg-color: rgb(255 255 255 / 0.4);
 }
 
