feat: 编辑体验优化

--- a/src/components/Tags/Tag/index.module.less
+++ b/src/components/Tags/Tag/index.module.less
@@ -19,4 +19,9 @@
   padding: 6px 10px;
   font-size: 12px;
   border-radius: 4px;
+  .tag {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
