关系图抽离为组件

--- a/src/pages/Cards/CardDetail/CardList/index.module.less
+++ b/src/pages/Cards/CardDetail/CardList/index.module.less
@@ -11,6 +11,8 @@
     background-color: var(--card-item-bg);
     box-shadow: var(--box-shadow1);
     border-radius: 8px;
+    max-height: 200px;
+    overflow-y: hidden;
     &.hover:hover {
       background-color: var(--common-hover-bg);
     }
