--- a/src/components/Editor/extensions/paragraph/components/ColorText/index.module.less
+++ b/src/components/Editor/extensions/paragraph/components/ColorText/index.module.less
@@ -1,5 +1,8 @@
+@import "@/components/Editor/extensions/hovering-item-common.less";
+
 .textContainer {
-  position: relative;
+  composes: item;
+  width: 56px;
   .text {
     display: flex;
     justify-content: center;
