--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -30,9 +30,8 @@
     box-sizing: border-box;
     padding: 20px;
     height: calc(100% - 40px);
-    border-right: 1px solid var(--line-color);
+    //border-right: 1px solid var(--line-color);
     background-color: var(--card-bg-color);
-    // box-shadow: var(--box-shadow1);
     border-radius: 8px;
     border: 1px solid var(--line-color);
     .header {
