--- a/src/components/SelectCardModal/index.module.less
+++ b/src/components/SelectCardModal/index.module.less
@@ -7,13 +7,32 @@
     gap: 10px;
     height: 100%;
     box-sizing: border-box;
-    overflow-y: auto;
     width: 300px;
     flex: none;
     &::-webkit-scrollbar {
       display: none;
     }
     padding: 10px;
+    .headers {
+      display: flex;
+      gap: 10px;
+      .btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 36px;
+      }
+    }
+    .cardList {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      overflow-y: auto;
+      padding: 4px;
+      &::-webkit-scrollbar {
+          display: none;
+      }
+    }
   }
   .selectPanel {
     height: 100%;
