feat: 自动更新按钮

--- a/src/layouts/DefaultLayout/Sidebar/index.module.less
+++ b/src/layouts/DefaultLayout/Sidebar/index.module.less
@@ -10,4 +10,17 @@
     flex-direction: column;
     gap: 20px;
   }
+
+  .checking {
+    animation: rotate 1s linear infinite;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(359deg);
+  }
 }
