--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -20,72 +20,75 @@
       box-shadow: var(--box-shadow1);
     }
   }
-  .sidebar {
+  .sidebarContainer {
     flex: none;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: calc(100% - 40px);
-    margin: 20px;
-    box-sizing: border-box;
     padding: 20px;
-    height: calc(100% - 40px);
-    //border-right: 1px solid var(--line-color);
-    background-color: var(--card-bg-color);
-    border-radius: 8px;
-    border: 1px solid var(--line-color);
-    .header {
+    height: 100%;
+    box-sizing: border-box;
+    display: flex;
+    .sidebar {
       display: flex;
-      gap: 10px;
       flex-direction: column;
-      .total {
+      gap: 10px;
+      box-sizing: border-box;
+      padding: 20px;
+      height: 100%;
+      background-color: var(--card-bg-color);
+      border-radius: 8px;
+      border: 1px solid var(--line-color);
+      .header {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-        .number {
-          font-weight: bold;
-        }
-        .buttons {
-          display: flex;
-          gap: 8px;
-          flex-shrink: 0;
-        }
-      }
-      .input {
-        position: relative;
-        z-index: 1;
-        flex: 1;
-      }
-      .searchTips {
-        position: absolute;
-        top: calc(100% + 10px);
-        width: 100%;
-        left: 0;
-        background-color: var(--search-tips-bg, #fff);
-        border-radius: 8px;
-        box-shadow: var(--box-shadow1);
-        padding: 20px;
-        box-sizing: border-box;
-        .searchHeader {
+        gap: 10px;
+        flex-direction: column;
+        .total {
           display: flex;
           justify-content: space-between;
           align-items: center;
-          margin-bottom: 16px;
-          .title {
-            font-size: 14px;
+          .number {
             font-weight: bold;
+          }
+          .buttons {
+            display: flex;
+            gap: 8px;
+            flex-shrink: 0;
+          }
+        }
+        .input {
+          position: relative;
+          z-index: 1;
+          flex: 1;
+        }
+        .searchTips {
+          position: absolute;
+          top: calc(100% + 10px);
+          width: 100%;
+          left: 0;
+          background-color: var(--search-tips-bg, #fff);
+          border-radius: 8px;
+          box-shadow: var(--box-shadow1);
+          padding: 20px;
+          box-sizing: border-box;
+          .searchHeader {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 16px;
+            .title {
+              font-size: 14px;
+              font-weight: bold;
+            }
           }
         }
       }
-    }
-    .cardList {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      overflow-y: auto;
-      padding: 4px;
-      &::-webkit-scrollbar {
-        display: none;
+      .cardList {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        overflow-y: auto;
+        padding: 4px;
+        &::-webkit-scrollbar {
+          display: none;
+        }
       }
     }
   }
