--- a/src/components/Editor/extensions/image-gallary/components/ImageGallery/index.module.less
+++ b/src/components/Editor/extensions/image-gallary/components/ImageGallery/index.module.less
@@ -8,7 +8,7 @@
     border-radius: 8px;
     border: 1px dashed #E7E9E8;
     cursor: pointer;
-    font-size: 32px;
+    font-size: 24px;
   }
   .settingButton {
     border-radius: 8px;
@@ -21,4 +21,38 @@
     background-color: var(--primary-bg-color);
     box-shadow: var(--box-shadow1);
   }
+  &:hover .actions {
+    opacity: 1;
+    color: white;
+    display: flex;
+  }
+}
+
+.actions {
+  display: none;
+  opacity: 0;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 100;
+  background-color: rgba(38, 38, 38, 0.6);
+  border-radius: 8px;
+  transition: opacity .3s ease-in-out;
+}
+
+.item {
+  width: 28px;
+  height: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.divider {
+  width: 1px;
+  height: 18px;
+  margin: auto 4px;
+  background-color: white;
+  background-color: rgba(255, 255, 255, 0.1);
 }
