--- a/src/components/Editor/extensions/image-gallary/components/HorizontalImageGallery/index.module.less
+++ b/src/components/Editor/extensions/image-gallary/components/HorizontalImageGallery/index.module.less
@@ -3,4 +3,12 @@
   gap: 10px;
   flex-wrap: wrap;
   font-size: 0;
+  .item {
+    flex-grow: 1;
+    img {
+      width: 100%;
+      object-fit: cover;
+      object-position: center;;
+    }
+  }
 }
