--- a/src/components/Editor/extensions/image-gallary/components/ImageGallerySetting/index.module.less
+++ b/src/components/Editor/extensions/image-gallary/components/ImageGallerySetting/index.module.less
@@ -1,8 +1,13 @@
 .settingContainer {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 16px;
   padding: 20px;
+  .subContainer {
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+  }
   .title {
     font-size: 16px;
     font-weight: bold;
