--- a/src/pages/Cards/CardDetail/index.module.less
+++ b/src/pages/Cards/CardDetail/index.module.less
@@ -9,7 +9,7 @@
     height: 100%;
     box-sizing: border-box;
     margin: 0 auto;
-    padding: 40px;
+    padding: 40px 80px;
     min-width: 600px;
     max-width: 880px;
     @media screen and (max-width: 1280px) {
