feat: 支持 Tabs 布局

--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -11,4 +11,5 @@ html[data-theme="dark"] {
   --table-odd-bg: rgba(255, 255, 255, .05);
   --table-border-color: #606770;
   --card-bg-color: rgb(255 255 255 / 0.01);
+  --bottom-line-bg: #5472e4;
 }
