--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -1,6 +1,6 @@
 html[data-theme='light'] {
   --primary-bg-color: #f5f7f9;
-  --line-color: #ddd;
+  --line-color: #0009321f;
   --text-normal: rgba(0, 0, 0, .9);
   --code-normal: #18045f;
   // --code-bg: rgba(250, 255, 100, .15);
@@ -12,5 +12,6 @@ html[data-theme='light'] {
   --table-border-color: #dadde1;
   --table-odd-bg: #e6e6e666;
   --card-bg-color: rgb(255 255 255 / 0.4);
+  --bottom-line-bg: #3358d4;
 }
 
