--- a/src/layouts/DefaultLayout/TitleBar/index.module.less
+++ b/src/layouts/DefaultLayout/TitleBar/index.module.less
@@ -15,12 +15,9 @@
         position: absolute;
         width: 100%;
         height: 2px;
-        background-color: #1a66ff;
+        background-color: var(--bottom-line-bg);
         bottom: -20px;
         left: 0;
-      }
-      &.active {
-        color: #1a66ff;
       }
     }
   }
