feat: 删除优化，卡片弹窗打开速度优化，颜色选择问题修复

--- a/src/editor-extensions/card-link/components/CardLink/index.module.less
+++ b/src/editor-extensions/card-link/components/CardLink/index.module.less
@@ -1,4 +1,4 @@
 .cardLinkContainer {
-  border-bottom: 1px dashed var(--line-color);
+  border-bottom: 3px double var(--line-color);
   cursor: pointer;
 }
