feat: 支持多窗口编辑

--- a/src/pages/Cards/CardItem2/index.module.less
+++ b/src/pages/Cards/CardItem2/index.module.less
@@ -33,6 +33,7 @@
     line-height: 2;
     margin-top: 10px;
     margin-bottom: 0;
+    content-visibility: auto;
     :global(code) {
       color: var(--code-normal, #FBDE2D);
       background-color: var(--code-bg, transparent);
