--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -12,4 +12,5 @@ html[data-theme="dark"] {
   --table-border-color: #606770;
   --card-bg-color: rgb(255 255 255 / 0.01);
   --bottom-line-bg: #5472e4;
+  --tab-active-color: #272f3b;
 }
