--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -13,5 +13,6 @@ html[data-theme='light'] {
   --table-odd-bg: #e6e6e666;
   --card-bg-color: rgb(255 255 255 / 0.4);
   --bottom-line-bg: #3358d4;
+  --tab-active-color: #ecedf1;
 }
 
