feat: 支持移动卡片到另一侧边栏

--- a/src/pages/Cards/CardsManagement/CardTabs/TabItem/index.module.less
+++ b/src/pages/Cards/CardsManagement/CardTabs/TabItem/index.module.less
@@ -32,6 +32,7 @@
     display: flex;
     align-items: center;
     gap: 8px;
+    user-select: none;
     .text {
       line-height: 30px;
       //white-space: nowrap;
