--- a/src/pages/Cards/CardsManagement/CardTabs/index.module.less
+++ b/src/pages/Cards/CardsManagement/CardTabs/index.module.less
@@ -8,7 +8,7 @@
   position: sticky;
   top: 0;
   background-color: var(--primary-bg-color);
-  z-index: 1;
+  z-index: 3;
   width: 100%;
   box-sizing: border-box;
   overflow-x: auto;
@@ -32,6 +32,23 @@
       border-radius: 10px;
       background-color: var(--common-hover-bg);
       cursor: pointer;
+    }
+  }
+  .contextMenu {
+    position: fixed;
+    z-index: 1;
+    width: 120px;
+    padding: 12px;
+    border-radius: 8px;
+    background-color: var(--primary-bg-color);
+    box-shadow: var(--box-shadow1);
+    .item {
+      padding: 8px;
+      cursor: pointer;
+      border-radius: 8px;
+      &:hover {
+        background-color: var(--common-hover-bg);
+      }
     }
   }
 }
