--- a/src/pages/Cards/CardsManagement/index.module.less
+++ b/src/pages/Cards/CardsManagement/index.module.less
@@ -1,5 +1,7 @@
 .cardsManagement {
   height: 100%;
+  border-bottom: 20px solid transparent;
+  box-sizing: border-box;
   overflow-y: auto;
   width: 100%;
 }
