--- a/src/components/LinkGraph/index.module.less
+++ b/src/components/LinkGraph/index.module.less
@@ -5,7 +5,10 @@
 
 .editor {
   position: absolute;
-  padding: 20px;
+  border-bottom: 20px solid transparent;
+  border-top: 20px solid transparent;
+  padding: 0 20px;
+  box-sizing: border-box;
   background: var(--primary-bg-color);
   box-shadow: var(--box-shadow1);
   border-radius: 4px;
