--- a/src/components/Editor/extensions/image-gallary/components/ImageGallerySetting/ImageItem/index.module.less
+++ b/src/components/Editor/extensions/image-gallary/components/ImageGallerySetting/ImageItem/index.module.less
@@ -7,11 +7,18 @@
   position: relative;
   cursor: pointer;
   border-radius: 12px;
+  overflow: hidden;
+  &.dragging {
+    border: 2px dashed #dbf3da;
+  }
+  &.drop {
+    border: 2px dashed #dbf3da;
+  }
   .img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 12px;
+    border-radius: 8px;
   }
   &:hover {
     border: 2px solid #dbf3da;
