feat: 支持段落拖拽

--- a/src/components/Editor/extensions/blockquote/components/Blockquote/index.module.less
+++ b/src/components/Editor/extensions/blockquote/components/Blockquote/index.module.less
@@ -4,7 +4,7 @@
   border-left: 3px solid rgba(0, 0, 0, 0.4);
   padding: 16px;
   color: #454a52;
-  & > p:last-child {
+  & > [class*="container"]:last-child p {
     margin-bottom: 0;
   }
   &.dark {
