--- a/src/components/Editor/extensions/paragraph/components/Paragraph/index.module.less
+++ b/src/components/Editor/extensions/paragraph/components/Paragraph/index.module.less
@@ -1,3 +1,57 @@
-.paragraph {
-  margin: 0 0 var(--block-distance, 10px) 0;
+.container {
+  position: relative;
+  .paragraph {
+    //outline: 1px solid blue;
+    margin: 0 0 var(--block-distance, 10px) 0;
+    &.dragging {
+      opacity: 0.5;
+    }
+    &.drop {
+      opacity: 0.5;
+      &.before {
+        &::before {
+          content: '';
+          position: absolute;
+          top: -2px;
+          left: 0;
+          right: 0;
+          height: 2px;
+          background-color: #dbf3da;
+        }
+      }
+      &.after {
+        &::after {
+          content: '';
+          position: absolute;
+          bottom: -2px;
+          left: 0;
+          right: 0;
+          height: 2px;
+          background-color: #dbf3da;
+        }
+      }
+    }
+  }
+  .dragHandler {
+    position: absolute;
+    top: 0;
+    left: -20px;
+    width: 20px;
+    height: 1.8em;
+    //outline: 1px solid red;
+    user-select: none;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    .icon {
+      transform: translateY(-2px);
+    }
+  }
+  &:hover {
+    .dragHandler.canDrag {
+      opacity: 1;
+    }
+  }
 }
