feat: 支持高亮块和 blockquote 的拖拽

--- a/src/components/Editor/extensions/highlight-block/components/HighlightBlock/index.module.less
+++ b/src/components/Editor/extensions/highlight-block/components/HighlightBlock/index.module.less
@@ -6,4 +6,11 @@
     left: 50%;
     transform: translateX(-50%);
   }
+  .highlightBlock {
+    &.dragging {
+      opacity: 0.5;
+    }
+    @import '@/components/Editor/extensions/drop-common.less';
+  }
+  @import '@/components/Editor/extensions/drag-common.less';
 }
