--- a/src/components/Editor/extensions/paragraph/components/Paragraph/index.module.less
+++ b/src/components/Editor/extensions/paragraph/components/Paragraph/index.module.less
@@ -3,55 +3,7 @@
   .paragraph {
     //outline: 1px solid blue;
     margin: 0 0 var(--block-distance, 10px) 0;
-    &.dragging {
-      opacity: 0.5;
-    }
-    &.drop {
-      opacity: 0.5;
-      &.before {
-        &::before {
-          content: '';
-          position: absolute;
-          top: -2px;
-          left: 0;
-          right: 0;
-          height: 2px;
-          background-color: #dbf3da;
-        }
-      }
-      &.after {
-        &::after {
-          content: '';
-          position: absolute;
-          bottom: -2px;
-          left: 0;
-          right: 0;
-          height: 2px;
-          background-color: #dbf3da;
-        }
-      }
-    }
+    @import '@/components/Editor/extensions/drop-common.less';
   }
-  .dragHandler {
-    position: absolute;
-    top: 0;
-    left: -20px;
-    width: 20px;
-    height: 1.8em;
-    //outline: 1px solid red;
-    user-select: none;
-    opacity: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    .icon {
-      transform: translateY(-2px);
-    }
-  }
-  &:hover {
-    .dragHandler.canDrag {
-      opacity: 1;
-    }
-  }
+  @import '@/components/Editor/extensions/drag-common.less';
 }
